--- a/Makefile.win
+++ b/Makefile.win
@@ -1,17 +1,17 @@
 # Project: 培训中心管理系统
 # Makefile created by Dev-C++ 5.11
 
-CPP      = g++.exe
-CC       = gcc.exe
+CPP      = g++.exe -D__DEBUG__
+CC       = gcc.exe -D__DEBUG__
 WINDRES  = windres.exe
-OBJ      = main.o administrator.o global.o teacher.o courseResource.o recordProcess.o
-LINKOBJ  = main.o administrator.o global.o teacher.o courseResource.o recordProcess.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib"
+OBJ      = main.o administrator.o global.o teacher.o courseResource.o recordProcess.o student.o
+LINKOBJ  = main.o administrator.o global.o teacher.o courseResource.o recordProcess.o student.o
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -g3
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include"
 BIN      = 培训中心管理系统.exe
-CXXFLAGS = $(CXXINCS) 
-CFLAGS   = $(INCS) 
+CXXFLAGS = $(CXXINCS) -g3
+CFLAGS   = $(INCS) -g3
 RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
@@ -41,3 +41,6 @@ courseResource.o: courseResource.cpp
 
 recordProcess.o: recordProcess.cpp
 	$(CPP) -c recordProcess.cpp -o recordProcess.o $(CXXFLAGS)
+
+student.o: student.cpp
+	$(CPP) -c student.cpp -o student.o $(CXXFLAGS)
