--- a/Makefile.win
+++ b/Makefile.win
@@ -1,17 +1,17 @@
 # Project: 培训中心管理系统
 # Makefile created by Dev-C++ 5.11
 
-CPP      = g++.exe -D__DEBUG__
-CC       = gcc.exe -D__DEBUG__
+CPP      = g++.exe
+CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o administrator.o global.o teacher.o courseResource.o recordProcess.o student.o
-LINKOBJ  = main.o administrator.o global.o teacher.o courseResource.o recordProcess.o student.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -g3
+OBJ      = main.o administrator.o global.o teacher.o course.o recordProcess.o student.o selectionTable.o classroom.o
+LINKOBJ  = main.o administrator.o global.o teacher.o course.o recordProcess.o student.o selectionTable.o classroom.o
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
-CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include"
+CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
 BIN      = 培训中心管理系统.exe
-CXXFLAGS = $(CXXINCS) -g3
-CFLAGS   = $(INCS) -g3
+CXXFLAGS = $(CXXINCS) 
+CFLAGS   = $(INCS) 
 RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
@@ -36,11 +36,17 @@ global.o: global.cpp
 teacher.o: teacher.cpp
 	$(CPP) -c teacher.cpp -o teacher.o $(CXXFLAGS)
 
-courseResource.o: courseResource.cpp
-	$(CPP) -c courseResource.cpp -o courseResource.o $(CXXFLAGS)
+course.o: course.cpp
+	$(CPP) -c course.cpp -o course.o $(CXXFLAGS)
 
 recordProcess.o: recordProcess.cpp
 	$(CPP) -c recordProcess.cpp -o recordProcess.o $(CXXFLAGS)
 
 student.o: student.cpp
 	$(CPP) -c student.cpp -o student.o $(CXXFLAGS)
+
+selectionTable.o: selectionTable.cpp
+	$(CPP) -c selectionTable.cpp -o selectionTable.o $(CXXFLAGS)
+
+classroom.o: classroom.c
+	$(CPP) -c classroom.c -o classroom.o $(CXXFLAGS)
